# redViewer

./: .gitignore  README.md  backend.Dockerfile  pyproject.toml
.github/workflows/: build-desktop.yml  demo.yml  docs_deploy.yml  release.yml
backend/: app.py
backend/api/: __init__.py  schemas.py
backend/api/routes/: cache.py  comic.py  kemono.py  model.py  root.py
backend/core/: __init__.py  aggregator.py  crypto.py  library.py  logging.py  pages.py  watcher.py
backend/infra/: __init__.py  factory.py
backend/infra/auth/: __init__.py  base.py  env.py  file.py
backend/infra/config/: __init__.py  base.py  env.py  file.py
backend/models/: __init__.py  book.py
backend/storage/: __init__.py  base.py  factory.py  local.py  r2.py
backend/tools/: generate_r2_index.py
backend/utils/: __init__.py  butils.py  cbz_cache.py  conf_sample.yml  file_handlers.py  mode_strategy.py
deploy/assets/configs/: cn.toml  global.toml
deploy/assets/icons/: icon.icns
deploy/online_scripts/: linux.sh  macos.sh  windows.ps1
deploy/scripts/: build-desktop.ps1  build-desktop.sh  macos-dmg-postinstall.sh  paths.ps1
deploy/tauri/: Cargo.toml  clippy.toml  index.html  package.json  splash.html  toast.html  vite.config.ts
deploy/tauri/installer/: Cargo.toml  build.rs  resources.rc
deploy/tauri/installer/src/: args.rs  install.rs  main.rs
deploy/tauri/lib/: Cargo.toml
deploy/tauri/lib/src/: config.rs  downloader.rs  lib.rs  paths.rs  python.rs
deploy/tauri/mainWin/: index.html  main.js  style.css
deploy/tauri/src/: App.tsx  index.css  main.tsx
deploy/tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
deploy/tauri/src-tauri/capabilities/: default.json
deploy/tauri/src-tauri/i18n/: en-US.json  guide_en-US.json  guide_zh-CN.json  zh-CN.json
deploy/tauri/src-tauri/src/: args.rs  guide.rs  i18n.rs  main.rs  main_window.rs  python.rs  splash.rs  toast.rs  tray.rs  webserver.rs
deploy/tauri/src-tauri/windows/: hooks.nsh  installer.nsi
deploy/tauri/src-tauri/windows/lang/: English.nsh  SimpChinese.nsh
deploy/tauri/src/components/: ActionButton.tsx  DragRegion.tsx  splash.css  splash.tsx  toast.css  toast.tsx
deploy/tauri/src/lib/: i18n.ts  utils.ts
docs/: index.md  package.json
docs/.vitepress/: config.js
docs/.vitepress/theme/: MyLayout.vue  custom.css  index.js
docs/_github/: preset.md  release_notes.md
docs/changelog/: index.md
docs/contribute/: feed.md
docs/deploy/: adv.md  index.md
docs/faq/: index.md
docs/guide/: admin.md  folder.md  index.md
frontend/: jsconfig.json  package.json  vite.config.js
frontend/functions/api/: config.js
frontend/src/: main.js  style.css
frontend/src/components/: TopBtnGroup.vue  TopBtnGroupOfBook.vue  TopBtnGroupOfEp.vue  bookHandleBtn.vue
frontend/src/components/func/: ConfigDialog.vue  FilterDialog.vue  PageReader.vue  ProtectedGif.vue  ScrollSpeedDialog.vue  slider.vue
frontend/src/icons/: AdminIcon.vue  ArrowsHorizontal.vue  ArrowsVertical.vue  BackIcon.vue  BoardIcon.vue  DoujinIcon.vue  EpisodesIcon.vue  FirstPage.vue  LastPage.vue  ListIcon.vue  MoonIcon.vue  SaveIcon.vue  SeriesIcon.vue  SunIcon.vue  ToolBarTop.vue  index.js
frontend/src/root/: RootPanel.vue  TabBackend.vue  TabCgs.vue
frontend/src/router/: index.js
frontend/src/static/: store.js
frontend/src/styles/: books_list.scss
frontend/src/utils/: crypto.js
frontend/src/view/: book.vue  books_list.vue  ep_list.vue  kemono.vue  kemono_book.vue  kemono_books_list.vue
