[project]
name = "backend"
version = "1.3.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",
    "loguru>=0.7.3",
    "packaging>=25.0",
    "platformdirs",
    "py7zr",
    "pydantic",
    "pyyaml",
    "send2trash",
    "starlette",
    "tqdm",
    "uvicorn>=0.30.1",
    "watchdog>=6.0.0",
    "watchfiles",
]
