[package]
name = "installer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rvInstaller"
path = "src/main.rs"

[dependencies]
lib = { path = "../lib" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1"
