[package]
name = "lib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
ureq = "3"
parking_lot = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "gzip"], default-features = false }
flate2 = "1"
tar = "0.4"
futures-util = "0.3"
